# enums

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tester.yml
src/: enums.rs  lib.rs  nums.rs
src/enums/: tests.rs
src/nums/: tests.rs
tests/: mod.rs  tests.rs
